# triexporter

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  ANALYSIS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MODERNIZATION_PLAN.md  README.md  SECURITY.md  TriExporter.sln  dxsdk.props  fbxsdk.props  vcpkg.json
.github/workflows/: build.yml  ci-cmake.yml  ci-msbuild.yml
TriExporter/: 3d.cpp  3d.h  MainDlg.cpp  MainDlg.h  TriExporter.vcxproj  TriExporter.vcxproj.filters  TriFile.h  grannyfile.h  stdafx.h  targetver.h  wic_texture_loader.cpp  wic_texture_loader.h
TriExporter.WinUI/: App.xaml  App.xaml.cpp  App.xaml.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h
TriExporter.WinUI/ViewModels/: MainViewModel.cpp  MainViewModel.h  RelayCommand.h
docs/: MIGRATION.md
triexporter/: SharedCache.cpp  SharedCache.h  UnstuffDlg.h
